--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -64,6 +64,9 @@ body {
     align-items: center;
     gap: 20px;
     margin-bottom: 30px;
+    .vs__selected-options {
+      padding: 10px;
+    }
     @media (max-width: $laptop) {
       flex-direction: column;
       align-items: flex-start;
