--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -29,10 +29,10 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 
   > main {
     flex: 1 1 auto;
+    padding-bottom: 50px;
   }
 
   > * {
@@ -45,9 +45,21 @@ body {
 
 @import "./base/ui";
 
-//@import "./base/header";
+.menu-enter-active,
+.menu-leave-active {
+  transition: transform 0.4s;
+}
+
+.menu-enter-from {
+  transform: translate(100%, 0);
+}
+.menu-leave-to {
+  transform: translate(100%, 0);
+}
 
 .main-block {
+  display: flex;
+  gap: 10px;
   margin-top: 30px;
   &__container {
   }
@@ -60,53 +72,53 @@ body {
 
   &__filters {
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    flex-direction: column;
+    align-self: flex-start;
+    align-content: center;
     gap: 20px;
-    margin-bottom: 30px;
+
+    margin: 0px 0;
+    padding: 30px 10px 0;
+    height: 100%;
+
+    position: fixed;
+    top: 103px;
+    right: 0;
+
+    z-index: 10;
+
+    background-color: #fff;
+    border-left: 1px solid rgba(0, 0, 0, 0.25);
+    @media (max-width: 768px) {
+      top: 154px;
+    }
     .vs__selected-options {
       padding: 10px;
     }
-    @media (max-width: $laptop) {
-      flex-direction: column;
-      align-items: flex-start;
-    }
   }
   &__regions {
-    width: 200px;
-    box-shadow: 0px 2px 4px rgb(0 0 0 / 8%);
-  }
-  &__search {
-    padding: 10px;
     max-width: 350px;
     width: 100%;
-    border-radius: 6px;
-    background: white;
-    border: 1px solid #f1f1f1;
     box-shadow: 0px 2px 4px rgb(0 0 0 / 8%);
-    margin-bottom: 20px;
-
-    input {
-      appearance: none;
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #e7e8e3;
-    }
   }
 
   &__checkboxes {
     display: flex;
-    gap: 15px;
-    padding: 10px 0;
-    @media (max-width: $tablet) {
-      gap: 5px;
+    flex-direction: column;
+    &-wrap {
+      display: flex;
+      gap: 10px;
+      padding: 10px 0;
+      @media (max-width: $tablet) {
+        gap: 5px;
+      }
     }
     div {
       position: relative;
     }
     label {
-      width: 45px;
-      height: 45px;
+      width: 35px;
+      height: 35px;
       border-radius: 50%;
       display: block;
       position: relative;
@@ -133,7 +145,21 @@ body {
       }
     }
   }
-
+  &__properties {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 350px;
+    &-wrap {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      div {
+        display: flex;
+        gap: 5px;
+      }
+    }
+  }
   &__checkbox {
     &-Red {
       background-color: rgb(180, 0, 0);
