--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,7 +11,7 @@ $fontFamily: "Roboto Slab";
 body {
   font-size: 14px;
   line-height: 1.3;
-  background-color: rgba(0, 0, 0, 0.01);
+  background-color: rgba(0, 0, 0, 0.03);
   &._lock {
     overflow: hidden;
     touch-action: none;
@@ -45,6 +45,16 @@ body {
 
 @import "./base/ui";
 
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.25s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
 .menu-enter-active,
 .menu-leave-active {
   transition: transform 0.4s;
@@ -69,7 +79,23 @@ body {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 15px 30px;
   }
+  &__search {
+    padding: 10px;
+    margin-bottom: 20px;
+    max-width: 350px;
+    width: 100%;
+    border-radius: 6px;
+    background: white;
+    border: 1px solid #f1f1f1;
+    box-shadow: 0px 2px 4px rgb(0 0 0 / 8%);
 
+    input {
+      appearance: none;
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #e7e8e3;
+    }
+  }
   &__filters {
     display: flex;
     flex-direction: column;
@@ -82,16 +108,13 @@ body {
     height: 100%;
 
     position: fixed;
-    top: 103px;
+    top: 72px;
     right: 0;
 
     z-index: 10;
 
     background-color: #fff;
     border-left: 1px solid rgba(0, 0, 0, 0.25);
-    @media (max-width: 768px) {
-      top: 154px;
-    }
     .vs__selected-options {
       padding: 10px;
     }
