--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,7 +11,8 @@ $fontFamily: "Roboto Slab";
 body {
   font-size: 14px;
   line-height: 1.3;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: getColor(bg);
+  color: getColor(sec);
   &._lock {
     overflow: hidden;
     touch-action: none;
@@ -67,6 +68,10 @@ body {
   transform: translate(100%, 0);
 }
 
+.vs__dropdown-toggle {
+  background-color: getColor(bg) !important;
+}
+
 .main-block {
   display: flex;
   gap: 10px;
@@ -85,15 +90,18 @@ body {
     max-width: 350px;
     width: 100%;
     border-radius: 6px;
-    background: white;
-    border: 1px solid #f1f1f1;
+    background: getColor(base);
+    border: 1px solid getColor(border);
     box-shadow: 0px 2px 4px rgb(0 0 0 / 8%);
 
     input {
       appearance: none;
       width: 100%;
       padding: 10px;
-      border: 1px solid #e7e8e3;
+      background: getColor(base);
+      &::placeholder {
+        color: getColor(sec);
+      }
     }
   }
   &__filters {
@@ -113,8 +121,8 @@ body {
 
     z-index: 10;
 
-    background-color: #fff;
-    border-left: 1px solid rgba(0, 0, 0, 0.25);
+    background-color: getColor(base);
+    border-left: 1px solid getColor(border);
     .vs__selected-options {
       padding: 10px;
     }
